--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -80,6 +80,7 @@ GtkSwitch.trough:active {
 
 /* primary toolbar - focused element borders */
 .primary-toolbar .entry:focus,
+.primary-toolbar .button:active:focus,
 .primary-toolbar GtkComboBox.combobox-entry .entry:focus,
 .primary-toolbar .button.raised:focus:active,
 .primary-toolbar .raised .button:focus:active,
