--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
@@ -18,13 +18,13 @@
     background-image: url("assets/checkbox-unchecked-insensitive.svg");
 }
 
-.check:window-unfocused,
-.check row:selected:window-unfocused {
+.check:backdrop,
+.check row:selected:backdrop {
     background-image: url("assets/checkbox-unchecked-unfocused.svg");
 }
 
-.check:insensitive:window-unfocused,
-.check row:selected:insensitive:window-unfocused {
+.check:insensitive:backdrop,
+.check row:selected:insensitive:backdrop {
     background-image: url("assets/checkbox-unchecked-insensitive-unfocused.svg");
 }
 
@@ -38,8 +38,8 @@
     background-image: url("assets/checkbox-checked-no-hilight.svg");
 }
 
-.check:active:window-unfocused,
-.check row:selected:active:window-unfocused {
+.check:active:backdrop,
+.check row:selected:active:backdrop {
     background-image: url("assets/checkbox-checked-unfocused.svg");
 }
 
@@ -49,8 +49,8 @@
     background-image: url("assets/checkbox-checked-insensitive.svg");
 }
 
-.check:active:insensitive:window-unfocused,
-.check row:selected:active:insensitive:window-unfocused {
+.check:active:insensitive:backdrop,
+.check row:selected:active:insensitive:backdrop {
     background-image: url("assets/checkbox-checked-insensitive-unfocused.svg");
 }
 
@@ -64,8 +64,8 @@
     background-image: url("assets/checkbox-mixed-no-hilight.svg");
 }
 
-.check:inconsistent:window-unfocused,
-.check row:selected:inconsistent:window-unfocused {
+.check:inconsistent:backdrop,
+.check row:selected:inconsistent:backdrop {
     background-image: url("assets/checkbox-mixed-unfocused.svg");
 }
 
@@ -75,8 +75,8 @@
     background-image: url("assets/checkbox-mixed-insensitive.svg");
 }
 
-.check:inconsistent:insensitive:window-unfocused,
-.check row:selected:inconsistent:insensitive:window-unfocused {
+.check:inconsistent:insensitive:backdrop,
+.check row:selected:inconsistent:insensitive:backdrop {
     background-image: url("assets/checkbox-mixed-insensitive-unfocused.svg");
 }
 
@@ -89,8 +89,8 @@
     background-image: url("assets/radio-unselected-no-hilight.svg");
 }
 
-.radio:window-unfocused,
-.radio row:selected:window-unfocused {
+.radio:backdrop,
+.radio row:selected:backdrop {
     background-image: url("assets/radio-unselected-unfocused.svg");
 }
 
@@ -100,8 +100,8 @@
     background-image: url("assets/radio-unselected-insensitive.svg");
 }
 
-.radio:insensitive:window-unfocused,
-.radio row:selected:insensitive:window-unfocused {
+.radio:insensitive:backdrop,
+.radio row:selected:insensitive:backdrop {
     background-image: url("assets/radio-unselected-insensitive-unfocused.svg");
 }
 
@@ -115,8 +115,8 @@
     background-image: url("assets/radio-selected-no-hilight.svg");
 }
 
-.radio:active:window-unfocused,
-.radio row:selected:active:window-unfocused {
+.radio:active:backdrop,
+.radio row:selected:active:backdrop {
     background-image: url("assets/radio-selected-unfocused.svg");
 }
 
@@ -127,8 +127,8 @@
     background-image: url("assets/radio-selected-insensitive.svg");
 }
 
-.radio:active:insensitive:window-unfocused,
-.radio row:selected:active:insensitive:window-unfocused {
+.radio:active:insensitive:backdrop,
+.radio row:selected:active:insensitive:backdrop {
     background-image: url("assets/radio-selected-insensitive-unfocused.svg");
 }
 
@@ -142,8 +142,8 @@
     background-image: url("assets/radio-mixed-no-hilight.svg");
 }
 
-.radio:inconsistent:window-unfocused,
-.radio row:selected:inconsistent:window-unfocused {
+.radio:inconsistent:backdrop,
+.radio row:selected:inconsistent:backdrop {
     background-image: url("assets/radio-mixed-unfocused.svg");
 }
 
@@ -154,8 +154,8 @@
     background-image: url("assets/radio-mixed-insensitive.svg");
 }
 
-.radio:inconsistent:insensitive:window-unfocused,
-.radio row:selected:inconsistent:insensitive:window-unfocused {
+.radio:inconsistent:insensitive:backdrop,
+.radio row:selected:inconsistent:insensitive:backdrop {
     background-image: url("assets/radio-mixed-insensitive-unfocused.svg");
 }
 
@@ -187,8 +187,8 @@ GtkScale.slider.horizontal {
     background-image: url("assets/scale-slider-horizontal.svg");
 }
 
-GtkScale.slider:window-unfocused,
-GtkScale.slider.horizontal:window-unfocused {
+GtkScale.slider:backdrop,
+GtkScale.slider.horizontal:backdrop {
     background-image: url("assets/scale-slider-horizontal-unfocused.svg");
 }
 
@@ -197,8 +197,8 @@ GtkScale.slider.horizontal:insensitive {
     background-image: url("assets/scale-slider-horizontal-insensitive.svg");
 }
 
-GtkScale.slider:insensitive:window-unfocused,
-GtkScale.slider.horizontal:insensitive:window-unfocused {
+GtkScale.slider:insensitive:backdrop,
+GtkScale.slider.horizontal:insensitive:backdrop {
     background-image: url("assets/scale-slider-horizontal-insensitive-unfocused.svg");
 }
 
@@ -207,7 +207,7 @@ GtkScale.slider.vertical {
     background-image: url("assets/scale-slider-vertical.svg");
 }
 
-GtkScale.slider.vertical:window-unfocused {
+GtkScale.slider.vertical:backdrop {
     background-image: url("assets/scale-slider-vertical-unfocused.svg");
 }
 
@@ -215,7 +215,7 @@ GtkScale.slider.vertical:insensitive {
     background-image: url("assets/scale-slider-vertical-insensitive.svg");
 }
 
-GtkScale.slider.vertical:insensitive:window-unfocused {
+GtkScale.slider.vertical:insensitive:backdrop {
     background-image: url("assets/scale-slider-vertical-insensitive-unfocused.svg");
 }
 
@@ -223,7 +223,7 @@ GtkScale.scale-has-marks-above.slider.horizontal {
     background-image: url("assets/scale-slider-marks-above-horizontal.svg");
 }
 
-GtkScale.scale-has-marks-above.slider.horizontal:window-unfocused {
+GtkScale.scale-has-marks-above.slider.horizontal:backdrop {
     background-image: url("assets/scale-slider-marks-above-horizontal-unfocused.svg");
 }
 
@@ -231,7 +231,7 @@ GtkScale.scale-has-marks-above.slider.horizontal:insensitive {
     background-image: url("assets/scale-slider-marks-above-horizontal-insensitive.svg");
 }
 
-GtkScale.scale-has-marks-above.slider.horizontal:insensitive:window-unfocused {
+GtkScale.scale-has-marks-above.slider.horizontal:insensitive:backdrop {
     background-image: url("assets/scale-slider-marks-above-horizontal-insensitive-unfocused.svg");
 }
 
@@ -239,7 +239,7 @@ GtkScale.scale-has-marks-above.slider.vertical {
     background-image: url("assets/scale-slider-marks-above-vertical.svg");
 }
 
-GtkScale.scale-has-marks-above.slider.vertical:window-unfocused {
+GtkScale.scale-has-marks-above.slider.vertical:backdrop {
     background-image: url("assets/scale-slider-marks-above-vertical-unfocused.svg");
 }
 
@@ -247,7 +247,7 @@ GtkScale.scale-has-marks-above.slider.vertical:insensitive {
     background-image: url("assets/scale-slider-marks-above-vertical-insensitive.svg");
 }
 
-GtkScale.scale-has-marks-above.slider.vertical:insensitive:window-unfocused {
+GtkScale.scale-has-marks-above.slider.vertical:insensitive:backdrop {
     background-image: url("assets/scale-slider-marks-above-vertical-insensitive-unfocused.svg");
 }
 
@@ -255,7 +255,7 @@ GtkScale.scale-has-marks-below.slider.horizontal {
     background-image: url("assets/scale-slider-marks-below-horizontal.svg");
 }
 
-GtkScale.scale-has-marks-below.slider.horizontal:window-unfocused {
+GtkScale.scale-has-marks-below.slider.horizontal:backdrop {
     background-image: url("assets/scale-slider-marks-below-horizontal-unfocused.svg");
 }
 
@@ -263,7 +263,7 @@ GtkScale.scale-has-marks-below.slider.horizontal:insensitive {
     background-image: url("assets/scale-slider-marks-below-horizontal-insensitive.svg");
 }
 
-GtkScale.scale-has-marks-below.slider.horizontal:insensitive:window-unfocused {
+GtkScale.scale-has-marks-below.slider.horizontal:insensitive:backdrop {
     background-image: url("assets/scale-slider-marks-below-horizontal-insensitive-unfocused.svg");
 }
 
@@ -271,7 +271,7 @@ GtkScale.scale-has-marks-below.slider.vertical {
     background-image: url("assets/scale-slider-marks-below-vertical.svg");
 }
 
-GtkScale.scale-has-marks-below.slider.vertical:window-unfocused {
+GtkScale.scale-has-marks-below.slider.vertical:backdrop {
     background-image: url("assets/scale-slider-marks-below-vertical-unfocused.svg");
 }
 
@@ -279,7 +279,7 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
     background-image: url("assets/scale-slider-marks-below-vertical-insensitive.svg");
 }
 
-GtkScale.scale-has-marks-below.slider.vertical:insensitive:window-unfocused {
+GtkScale.scale-has-marks-below.slider.vertical:insensitive:backdrop {
     background-image: url("assets/scale-slider-marks-below-vertical-insensitive-unfocused.svg");
 }
 
