--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -116,26 +116,26 @@
 }
 
 /* Unfocused window button background */
-.button:window-unfocused,
-.primary-toolbar .button.raised:window-unfocused,
-.primary-toolbar .raised .button:window-unfocused {
+.button:backdrop,
+.primary-toolbar .button.raised:backdrop,
+.primary-toolbar .raised .button:backdrop {
     background-image: none;
     background-color: @unfocused_button_background;
 }
 
 /* Unfocused window pushed button background */
-.button:active:window-unfocused {
+.button:active:backdrop {
     background-image: none;
     background-color: @unfocused_borders;
 }
 
 /* Unfocused window insensitive button background */
-.button:insensitive:window-unfocused {
+.button:insensitive:backdrop {
     background-image: none;
     background-color: @unfocused_insensitive_bg_color;
 }
 
-.button:insensitive:active:window-unfocused {
+.button:insensitive:active:backdrop {
     background-image: none;
     background-color: mix(@unfocused_insensitive_bg_color, @unfocused_borders, 0.5);
 }
@@ -197,20 +197,20 @@ GtkComboBox.combobox-entry .button:insensitive {
 }
 
 /* Unfocused windows entry background */
-.entry:window-unfocused,
-GtkComboBox.combobox-entry .button:window-unfocused,
-column-header.button:window-unfocused,
-column-header .button:window-unfocused,
-column-header.button:insensitive:window-unfocused,
-column-header .button:insensitive:window-unfocused {
+.entry:backdrop,
+GtkComboBox.combobox-entry .button:backdrop,
+column-header.button:backdrop,
+column-header .button:backdrop,
+column-header.button:insensitive:backdrop,
+column-header .button:insensitive:backdrop {
     background-image: none;
     background-color: @theme_unfocused_base_color;
     box-shadow: none;
 }
 
 /* Unfocused windows insensitive entry background */
-.entry:insensitive:window-unfocused,
-GtkComboBox.combobox-entry .button:insensitive:window-unfocused {
+.entry:insensitive:backdrop,
+GtkComboBox.combobox-entry .button:insensitive:backdrop {
     background-image: none;
     background-color: @unfocused_insensitive_bg_color;
 }
@@ -237,9 +237,9 @@ GtkComboBox.combobox-entry .button:insensitive:window-unfocused {
 }
 
 /* Unfocused window primary and inline toolbars background */
-.primary-toolbar .toolbar:window-unfocused,
-.primary-toolbar.toolbar:window-unfocused,
-.inline-toolbar.toolbar:window-unfocused  {
+.primary-toolbar .toolbar:backdrop,
+.primary-toolbar.toolbar:backdrop,
+.inline-toolbar.toolbar:backdrop  {
     background-image: none;
     background-color: @unfocused_dark_bg;
 }
@@ -254,12 +254,12 @@ GtkScale.progressbar {
                                      to (@switch_trough_active_bg_b));
 }
 
-GtkSwitch.trough:window-unfocused {
+GtkSwitch.trough:backdrop {
     background-color: @theme_unfocused_bg_color; /* FIXME */
     background-image: none;
 }
 
-GtkSwitch.trough:active:window-unfocused {
+GtkSwitch.trough:active:backdrop {
     background-color: @unfocused_borders;
     background-image: none;
 }
