--- a/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
@@ -83,7 +83,7 @@ column-header .button {
     color: alpha (@theme_text_color, 0.1);
 }
 
-GtkScale.trough:insensitive:window-unfocused { /* not working */
+GtkScale.trough:insensitive:backdrop { /* not working */
     background-color: transparent;
 }
 
