Fix theme syntax for gtk master
We no longer accept 'none' as a color name, its 'transparent' now.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2038,7 +2038,7 @@ GtkCalendar.button:insensitive,
 GtkCalendar.button:backdrop,
 GtkCalendar.button:insensitive:backdrop {
     background-image: none;
-    background-color: none;
+    background-color: transparent;
 }
 
 .highlight,
