Widget theme: fixed text-shadow on insensitive buttons on primary toolbars.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -594,7 +594,7 @@ GtkComboBox.combobox-entry .button {
     icon-shadow: none;
 }
 
-.primary-toolbar .button * {
+.primary-toolbar .button {
     text-shadow: @primary_toolbar_button_text_shadow 0 1;
 }
 
