--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -4,9 +4,9 @@
 .entry,
 GtkComboBox.combobox-entry .entry,
 GtkComboBox.combobox-entry .button,
-GtkComboBox.combobox-entry .button:focus,
+/*GtkComboBox.combobox-entry .button:focus,
 GtkComboBox.combobox-entry .button:active,
-GtkComboBox.combobox-entry .button:focus:active,
+GtkComboBox.combobox-entry .button:focus:active,*/
 .button:active,
 .button:active:hover,
 .button:insensitive,
@@ -50,17 +50,17 @@ GtkSwitch.trough:active {
 /* primary toolbar - generic element borders */
 .primary-toolbar .entry,
 .primary-toolbar GtkComboBox.combobox-entry .entry,
-.primary-toolbar GtkComboBox.combobox-entry .button,
+.primary-toolbar GtkComboBox.combobox-entry .button /*,
 .primary-toolbar GtkComboBox.combobox-entry .button:hover,
 .primary-toolbar GtkComboBox.combobox-entry .button:active,
 .primary-toolbar GtkComboBox.combobox-entry .button:active:focus,
 .primary-toolbar GtkComboBox.combobox-entry .button:active:hover,
 .primary-toolbar GtkComboBox.combobox-entry .button:active:hover:focus,
 .primary-toolbar GtkComboBox.combobox-entry .button:focus,
-.primary-toolbar GtkComboBox.combobox-entry .button:insensitive,
-.primary-toolbar .button:active,
+.primary-toolbar GtkComboBox.combobox-entry .button:insensitive, */
+.primary-toolbar .button:active, /*
 .primary-toolbar .button:active:insensitive,
-.primary-toolbar .button:active:hover,
+.primary-toolbar .button:active:hover, */
 .primary-toolbar .button.raised:insensitive,
 .primary-toolbar .raised .button:insensitive,
 .inline-toolbar.toolbar .button:active,
@@ -84,8 +84,8 @@ GtkSwitch.trough:active {
 .primary-toolbar GtkComboBox.combobox-entry .entry:focus,
 .primary-toolbar .button.raised:focus:active,
 .primary-toolbar .raised .button:focus:active,
-.primary-toolbar .button.raised:focus:active:hover,
-.primary-toolbar .raised .button:focus:active:hover,
+/*.primary-toolbar .button.raised:focus:active:hover,
+.primary-toolbar .raised .button:focus:active:hover,*/
 .primary-toolbar .button.raised.default:active,
 .primary-toolbar .raised .button.default:active,
 .inline-toolbar.toolbar .button:focus:active,
