--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -55,6 +55,8 @@ GtkWindow:backdrop {
 }
 
 * {
+    /* inherit the color from parent by default */
+    color: inherit;
     background-color: @theme_bg_color;
 }
 
